# cpp_starter_project

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: Doxygen.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  tests.cpp
